--- a/components/sensor.yaml
+++ b/components/sensor.yaml
@@ -8,11 +8,11 @@
     - temperature
 
 # Speedtest.net
-- platform: speedtest
-  minute:
-    - 0
-    - 30
-  monitored_conditions:
-    - ping
-    - download
-    - upload
+#- platform: speedtest
+#  minute:
+#    - 0
+#    - 30
+#  monitored_conditions:
+#    - ping
+#    - download
+#    - upload
