--- a/components/group.yaml
+++ b/components/group.yaml
@@ -14,18 +14,19 @@ entry:
   name: Entry
   entities:
     - light.entry
+    - switch.aeotec_dsc06106_smart_energy_switch_switch_3
 
 family:
   name: Family
   entities:
-    - device_tracker.carmels_nexus_5x
-    - device_tracker.stuarts_nexus_6p
+    - device_tracker.carmel_nexus5x
+    - device_tracker.stuart_nexus6p
 
-internet:
-  entities:
-    - sensor.speedtest_ping
-    - sensor.speedtest_download
-    - sensor.speedtest_upload
+# internet:
+#   entities:
+#     - sensor.speedtest_ping
+#     - sensor.speedtest_download
+#     - sensor.speedtest_upload
 
 master_bedroom:
   name: Master bedroom
@@ -40,7 +41,9 @@ misc:
   name: Miscellaneous
   view: yes
   entities:
-    - group.internet
+    # - group.internet
+    - garage_door.mqtt_sensor
+    - sensor.vision_zg8101_garage_door_detector_alarm_level_5
 
 weather:
   name: Weather
