--- a/customize.yaml
+++ b/customize.yaml
@@ -1,4 +1,7 @@
 ---
 
+sensor.bom_air_temp_c:
+  friendly_name: Temperature
+
 switch.aeotec_dsc06106_smart_energy_switch_switch_3:
   friendly_name: Front door power
