--- a/components/sensor.yaml
+++ b/components/sensor.yaml
@@ -7,6 +7,10 @@
   monitored_conditions:
     - air_temp
 
+# Daikin
+- platform: daikin
+  ipaddress: !secret daikin_ip
+
 # Speedtest.net
 #- platform: speedtest
 #  minute:
