--- a/components/camera.yaml
+++ b/components/camera.yaml
@@ -1,11 +1,5 @@
 ---
 
-# UVC G3 - Front
-- platform: generic
-  still_image_url: !secret camera_front
-  name: Front
-
-# UVC G3 - Side
-- platform: generic
-  still_image_url: !secret camera_side
-  name: Side
+- platform: uvc
+  nvr: !secret nvr_ip
+  key: !secret nvr_key
